--- a/src/components/ChoiceCard.css
+++ b/src/components/ChoiceCard.css
@@ -71,3 +71,23 @@ img {
   box-shadow: 0 0 0 3px rgba(0, 90, 239, 0.4); /* add a blue border when button is focused */
 }
 
+/* ChoiceCard.css */
+
+
+.choice-card.computer-choice {
+  /* Your styles for the computer's choice card */
+  animation: pulse 1s infinite; /* Example of a pulsing animation */
+}
+
+/* Example keyframes for a pulse animation */
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.03);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
